--- a/clinical-insights-assistant/.env
+++ b/clinical-insights-assistant/.env
@@ -3,4 +3,4 @@ env:
   LANGCHAIN_TRACING_V2="true"
   LANGCHAIN_API_KEY="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"
   LANGCHAIN_PROJECT="clinical-insights-assistant"
-  DATA_PATH="/Workspace/Users/manikandan_nagarasan@epam.com/clinical-insights-assistant/data/clinical_trial_data.csv"
+  DATA_PATH="/clinical-insights-assistant/data/clinical_trial_data.csv"
